Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/Cotizacion__c.object-meta.xml
<CustomObject>
    <label>Cotización</label>
    <nameField>
        <displayFormat>C-{0000000}</displayFormat>
        <label>Número de Cotización</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cotizaciones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>