Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/Afecta_Cobranzas__c.field-meta.xml
<CustomField>
    <fullName>Afecta_Cobranzas__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Afecta Cobranzas</label>
    <type>Checkbox</type>
</CustomField>