Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/Anio_Beneficio__c.field-meta.xml
<CustomField>
    <fullName>Anio_Beneficio__c</fullName>
    <label>Año Beneficio</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>