Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/Cantidad_Cuota_Inicial__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_Cuota_Inicial__c</fullName>
    <label>Cantidad Cuota Inicial</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>