Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/Categoria_Producto__c.field-meta.xml
<CustomField>
    <fullName>Categoria_Producto__c</fullName>
    <label>Categoria Producto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VILLA</fullName>
            </value>
            <value>
                <fullName>TERRENO</fullName>
            </value>
            <value>
                <fullName>DEPARTAMENTO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>