Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/CI_Aprobar_cotizacion_pref__c.field-meta.xml
<CustomField>
    <fullName>CI_Aprobar_cotizacion_pref__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo de check para aprobar la cotización preferencial y poder abrir el PDF de la cotización.</description>
    <inlineHelpText>Campo de check para aprobar la cotización preferencial y poder abrir el PDF de la cotización.</inlineHelpText>
    <label>¿Aprobar cotización preferencial?</label>
    <type>Checkbox</type>
</CustomField>