Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/CI_Bono__c.field-meta.xml
<CustomField>
    <fullName>CI_Bono__c</fullName>
    <label>Bono</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>