Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/CI_Comentario_Interno__c.field-meta.xml
<CustomField>
    <fullName>CI_Comentario_Interno__c</fullName>
    <label>Comentario Interno</label>
    <type>TextArea</type>
</CustomField>