Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/CI_Construccion__c.field-meta.xml
<CustomField>
    <fullName>CI_Construccion__c</fullName>
    <formula>CI_Modelo__r.CI_Area_Const__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mts. Construcción</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>