Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/CI_Credito_Finan__c.field-meta.xml
<CustomField>
    <fullName>CI_Credito_Finan__c</fullName>
    <label>Crédito Hipotecario</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>