Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/CI_Cuota__c.field-meta.xml
<CustomField>
    <fullName>CI_Cuota__c</fullName>
    <label>N° Cuota</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>