Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/CI_Cuota_Inicial__c.field-meta.xml
<CustomField>
    <fullName>CI_Cuota_Inicial__c</fullName>
    <label>Cuota Inicial</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>