Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/CI_Dscto_Entrada__c.field-meta.xml
<CustomField>
    <fullName>CI_Dscto_Entrada__c</fullName>
    <label>Descuento Entrada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>