Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/CI_Dscto_Precio__c.field-meta.xml
<CustomField>
    <fullName>CI_Dscto_Precio__c</fullName>
    <label>Descuento Precio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>