Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/CI_Fecha__c.field-meta.xml
<CustomField>
    <fullName>CI_Fecha__c</fullName>
    <label>Fecha</label>
    <type>Date</type>
</CustomField>