Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/CI_Fecha_ICI__c.field-meta.xml
<CustomField>
    <fullName>CI_Fecha_ICI__c</fullName>
    <label>Fecha Inicio Cálculo Interés</label>
    <type>Date</type>
</CustomField>