Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/CI_Financiamiento__c.field-meta.xml
<CustomField>
    <fullName>CI_Financiamiento__c</fullName>
    <label>Valor a Financiar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>