Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/CI_Formato__c.field-meta.xml
<CustomField>
    <fullName>CI_Formato__c</fullName>
    <label>Formato</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>No Redondear</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Redondear</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Aproximar</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>