Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/CI_Foto_Inmueble__c.field-meta.xml
<CustomField>
    <fullName>CI_Foto_Inmueble__c</fullName>
    <formula>RIGHT(CI_URL_Inmueble__c, (LEN(CI_URL_Inmueble__c) - FIND(&quot;versionId&quot;, CI_URL_Inmueble__c)) -9 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Foto Inmueble</label>
    <type>Text</type>
</CustomField>