Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/CI_Foto_Plano2__c.field-meta.xml
<CustomField>
    <fullName>CI_Foto_Plano2__c</fullName>
    <formula>LEFT(CI_Foto_Plano__c, (LEN(CI_Foto_Plano__c) - FIND(&quot;&amp;operationContext&quot;, CI_Foto_Plano__c)) - 35)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Foto Plano2</label>
    <type>Text</type>
</CustomField>