Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/CI_Foto_Plano3__c.field-meta.xml
<CustomField>
    <fullName>CI_Foto_Plano3__c</fullName>
    <formula>RIGHT(CI_URL_Plano2__c, (LEN(CI_URL_Plano2__c) - FIND(&quot;versionId&quot;, CI_URL_Plano2__c)) -9 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Foto Plano3</label>
    <type>Text</type>
</CustomField>