Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/CI_Identificacion__c.field-meta.xml
<CustomField>
    <fullName>CI_Identificacion__c</fullName>
    <label>Identificacion</label>
    <length>20</length>
    <type>Text</type>
</CustomField>