Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/CI_Inmueble__c.field-meta.xml
<CustomField>
    <fullName>CI_Inmueble__c</fullName>
    <formula>Implantaci_n_Principal__r.Lote__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Solar</label>
    <type>Text</type>
</CustomField>