Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/CI_Manzana__c.field-meta.xml
<CustomField>
    <fullName>CI_Manzana__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manzana</label>
    <referenceTo>Manzana__c</referenceTo>
    <relationshipLabel>Cotizaciones</relationshipLabel>
    <relationshipName>Cotizaciones</relationshipName>
    <type>Lookup</type>
</CustomField>