Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/CI_Modelo__c.field-meta.xml
<CustomField>
    <fullName>CI_Modelo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Modelo</label>
    <referenceTo>Modelo__c</referenceTo>
    <relationshipLabel>Cotizaciones</relationshipLabel>
    <relationshipName>Cotizaciones</relationshipName>
    <type>Lookup</type>
</CustomField>