Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/CI_Movil__c.field-meta.xml
<CustomField>
    <fullName>CI_Movil__c</fullName>
    <formula>CI_Cuenta__r.CI_Movil__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Celular</label>
    <type>Text</type>
</CustomField>