Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/CI_No_Venta__c.field-meta.xml
<CustomField>
    <fullName>CI_No_Venta__c</fullName>
    <displayFormat>{00000000}</displayFormat>
    <label>No. Venta</label>
    <type>AutoNumber</type>
</CustomField>