Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/CI_Obras_Ad__c.field-meta.xml
<CustomField>
    <fullName>CI_Obras_Ad__c</fullName>
    <label>Obras Adicionales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>