Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/CI_Oficial_Credito__c.field-meta.xml
<CustomField>
    <fullName>CI_Oficial_Credito__c</fullName>
    <label>Oficial de Crédito</label>
    <length>100</length>
    <type>Text</type>
</CustomField>