Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/CI_Oportunidad_PD__c.field-meta.xml
<CustomField>
    <fullName>CI_Oportunidad_PD__c</fullName>
    <label>Oportunidad</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Cotizaciones (Oportunidad)</relationshipLabel>
    <relationshipName>Cotizaciones1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>