Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/CI_Plazo__c.field-meta.xml
<CustomField>
    <fullName>CI_Plazo__c</fullName>
    <label>Plazo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>M</fullName>
                <label>MENSUAL</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>BIMESTRAL</label>
            </value>
            <value>
                <fullName>T</fullName>
                <label>TRIMESTRAL</label>
            </value>
            <value>
                <fullName>S</fullName>
                <label>SEMESTRAL</label>
            </value>
            <value>
                <fullName>A</fullName>
                <label>ANUAL</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>