Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/CI_Precio_Neto__c.field-meta.xml
<CustomField>
    <fullName>CI_Precio_Neto__c</fullName>
    <label>Precio Cotizado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>