Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/CI_Primer_Vencimiento__c.field-meta.xml
<CustomField>
    <fullName>CI_Primer_Vencimiento__c</fullName>
    <label>Primer Vencimiento</label>
    <type>Date</type>
</CustomField>