Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/CI_Proforma_R_N__c.field-meta.xml
<CustomField>
    <fullName>CI_Proforma_R_N__c</fullName>
    <label>Proforma R</label>
    <length>100</length>
    <type>Text</type>
</CustomField>