Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/CI_Proforma_V_Num__c.field-meta.xml
<CustomField>
    <fullName>CI_Proforma_V_Num__c</fullName>
    <label>Proforma V_Nº</label>
    <length>100</length>
    <type>Text</type>
</CustomField>