Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/CI_Reserva__c.field-meta.xml
<CustomField>
    <fullName>CI_Reserva__c</fullName>
    <label>Reserva</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>