Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/CI_Saldo_CE__c.field-meta.xml
<CustomField>
    <fullName>CI_Saldo_CE__c</fullName>
    <label>Saldo Cuota de Entrada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>