Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/CI_Solar__c.field-meta.xml
<CustomField>
    <fullName>CI_Solar__c</fullName>
    <label>Solar</label>
    <length>50</length>
    <type>Text</type>
</CustomField>