Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/CI_Tasa__c.field-meta.xml
<CustomField>
    <fullName>CI_Tasa__c</fullName>
    <label>Tasa</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>