Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/CI_Tel_Dom__c.field-meta.xml
<CustomField>
    <fullName>CI_Tel_Dom__c</fullName>
    <label>Teléfono Domicilio</label>
    <type>Phone</type>
</CustomField>