Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/CI_Tel_Ofi__c.field-meta.xml
<CustomField>
    <fullName>CI_Tel_Ofi__c</fullName>
    <label>Teléfono Oficina</label>
    <type>Phone</type>
</CustomField>