Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/CI_Terreno__c.field-meta.xml
<CustomField>
    <fullName>CI_Terreno__c</fullName>
    <formula>Implantaci_n_Principal__r.Lote__r.CI_Metros_Terreno__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mts. Terreno</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>