Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/CI_Tipo__c.field-meta.xml
<CustomField>
    <fullName>CI_Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ult. Día</fullName>
            </value>
            <value>
                <fullName>Abierto</fullName>
            </value>
            <value>
                <fullName>Cuota Inicial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>