Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/CI_Tipo_de_Cuota__c.field-meta.xml
<CustomField>
    <fullName>CI_Tipo_de_Cuota__c</fullName>
    <label>Tipo de Cuota</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>FIJA</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>FIJA C/INT</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>VARIABLE</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>VARIABLE C/INT</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>ADIC.</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>ADIC. C/INT</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>