Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/CI_Tipo_Venta__c.field-meta.xml
<CustomField>
    <fullName>CI_Tipo_Venta__c</fullName>
    <label>Tipo Venta</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>CREDITO HIPOTECARIO</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>CREDITO DIRECTO</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>CONTADO</label>
            </value>
            <value>
                <fullName>7</fullName>
                <isActive>false</isActive>
                <label>DACION EN PAGO</label>
            </value>
            <value>
                <fullName>4</fullName>
                <isActive>false</isActive>
                <label>PERMUTAS</label>
            </value>
            <value>
                <fullName>6</fullName>
                <isActive>false</isActive>
                <label>REEST. C/ENT</label>
            </value>
            <value>
                <fullName>3</fullName>
                <isActive>false</isActive>
                <label>TRUEQUE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>