Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/CI_Ubicacion__c.field-meta.xml
<CustomField>
    <fullName>CI_Ubicacion__c</fullName>
    <formula>/*TEXT( Implantaci_n_Principal__r.Lote__r.CI_Ubicacion__c )*/

CASE( TEXT( Implantaci_n_Principal__r.Lote__r.CI_Ubicacion__c ), 
&quot;ESQ&quot;,&quot;ESQUINERA&quot;,  
&quot;MED&quot;,&quot;MEDIANERA&quot;,  
&quot;N/A&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ubicación</label>
    <type>Text</type>
</CustomField>