Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/CI_UltimaHoraEntrada__c.field-meta.xml
<CustomField>
    <fullName>CI_UltimaHoraEntrada__c</fullName>
    <label>CI_UltimaHoraEntrada</label>
    <length>10</length>
    <type>Text</type>
</CustomField>