Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/CI_UltimaHoraEntradaV2__c.field-meta.xml
<CustomField>
    <fullName>CI_UltimaHoraEntradaV2__c</fullName>
    <label>CI_UltimaHoraEntradaV2</label>
    <length>10</length>
    <type>Text</type>
</CustomField>