Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/CI_URL_Inmueble__c.field-meta.xml
<CustomField>
    <fullName>CI_URL_Inmueble__c</fullName>
    <label>URL Inmueble</label>
    <type>Url</type>
</CustomField>