Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/CI_URL_Plano2__c.field-meta.xml
<CustomField>
    <fullName>CI_URL_Plano2__c</fullName>
    <label>URL Plano2</label>
    <type>Url</type>
</CustomField>