Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/CI_URL_Plano__c.field-meta.xml
<CustomField>
    <fullName>CI_URL_Plano__c</fullName>
    <label>URL Plano</label>
    <type>Url</type>
</CustomField>