Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/CI_Valor_Financiar__c.field-meta.xml
<CustomField>
    <fullName>CI_Valor_Financiar__c</fullName>
    <formula>Valor_de_Entrada__c - CI_Cuota_Inicial__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor a Financiar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>