Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/Codigo__c.field-meta.xml
<CustomField>
    <fullName>Codigo__c</fullName>
    <externalId>true</externalId>
    <label>Codigo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>