Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/Codigo_Venta__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Venta__c</fullName>
    <label>Código Venta</label>
    <length>8</length>
    <type>Text</type>
</CustomField>