Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/Comentario_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Comentario_Cliente__c</fullName>
    <label>Comentario Cliente</label>
    <type>TextArea</type>
</CustomField>