Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/ComentarioAnulacion__c.field-meta.xml
<CustomField>
    <fullName>ComentarioAnulacion__c</fullName>
    <label>Comentarios de Anulación</label>
    <type>TextArea</type>
</CustomField>