Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/Cuota_Inical__c.field-meta.xml
<CustomField>
    <fullName>Cuota_Inical__c</fullName>
    <formula>Valor_Contrato__c * Porcentaje_Cuota_Entrada__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cuota Inical</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>