Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/Descuento_Permitido__c.field-meta.xml
<CustomField>
    <fullName>Descuento_Permitido__c</fullName>
    <label>Descuento Permitido</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>