Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/Descuento_Porcentaje__c.field-meta.xml
<CustomField>
    <fullName>Descuento_Porcentaje__c</fullName>
    <label>Descuento Porcentaje</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>