Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/DiferenciaEntregaEntrada__c.field-meta.xml
<CustomField>
    <fullName>DiferenciaEntregaEntrada__c</fullName>
    <label>Diferencia Entrega - Entrada</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>