Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/EntradaEntrega__c.field-meta.xml
<CustomField>
    <fullName>EntradaEntrega__c</fullName>
    <label>Entrada - Entrega</label>
    <length>10</length>
    <type>Text</type>
</CustomField>