Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <defaultValue>&quot;Nueva&quot;</defaultValue>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nueva</fullName>
            </value>
            <value>
                <fullName>En Aprobación</fullName>
            </value>
            <value>
                <fullName>Aprobado</fullName>
            </value>
            <value>
                <fullName>Vigente</fullName>
            </value>
            <value>
                <fullName>Emitida</fullName>
            </value>
            <value>
                <fullName>Anulada</fullName>
            </value>
            <value>
                <fullName>Vendido</fullName>
            </value>
            <value>
                <fullName>Reestructurado</fullName>
            </value>
            <value>
                <fullName>Resciliado</fullName>
            </value>
            <value>
                <fullName>Estructurado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>