Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/Fecha_Cuota_Inicial__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Cuota_Inicial__c</fullName>
    <label>Fecha Cuota Inicial</label>
    <type>Date</type>
</CustomField>