Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/Fecha_Cuota_Saldo__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Cuota_Saldo__c</fullName>
    <label>Fecha Cuota Saldo</label>
    <type>Date</type>
</CustomField>