Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/Fecha_de_Ultima_Cuota__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Ultima_Cuota__c</fullName>
    <label>Fecha de Ultima Cuota</label>
    <type>Date</type>
</CustomField>