Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/Fecha_Vcto_Hipoteca__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Vcto_Hipoteca__c</fullName>
    <label>Fecha Vcto Hipoteca</label>
    <type>Date</type>
</CustomField>