Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/FechaControlVenta__c.field-meta.xml
<CustomField>
    <fullName>FechaControlVenta__c</fullName>
    <label>Fecha Control Venta</label>
    <type>Date</type>
</CustomField>