Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/Financiamiento__c.field-meta.xml
<CustomField>
    <fullName>Financiamiento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financiamiento</label>
    <referenceTo>Financiamiento__c</referenceTo>
    <relationshipLabel>Cotizaciones</relationshipLabel>
    <relationshipName>Cotizaciones</relationshipName>
    <type>Lookup</type>
</CustomField>