Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/Forma_de_pago__c.field-meta.xml
<CustomField>
    <fullName>Forma_de_pago__c</fullName>
    <label>Forma de pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Formas_de_Pago</valueSetName>
    </valueSet>
</CustomField>