Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/Implantaci_n_Principal__c.field-meta.xml
<CustomField>
    <fullName>Implantaci_n_Principal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Implantación</label>
    <referenceTo>Implantacion__c</referenceTo>
    <relationshipLabel>Cotizaciones</relationshipLabel>
    <relationshipName>Cotizaciones</relationshipName>
    <type>Lookup</type>
</CustomField>