Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/Ingresa_Preferencial__c.field-meta.xml
<CustomField>
    <fullName>Ingresa_Preferencial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ingresa Preferencial</label>
    <type>Checkbox</type>
</CustomField>